--- a/gizlilik-ve-cezer-politikasi.html
+++ b/gizlilik-ve-cezer-politikasi.html
@@ -12,10 +12,10 @@
     <meta property="og:title" content="Diş Hekimi Yavuz Yüksel - Diş Doktoru Funda Yüksel | Gizlilik ve Çerez Politikası" /> 
     <meta property="og:description" content="Eskişehir diş hekimi Dr. Dt. Yavuz Yüksel, Eskişehir diş doktoru Dr. Dt. Funda Yüksel, Eskişehir çene kırıkları, 20 lik (gömülü) diş, implant, kist, tümör, çene eklemi, sinüs lift tedavileri, ozon tedavisi, lazer tedavisi hizmetleri vermektedir." /> 
     <meta property="og:url" content="https://www.yukseldisklinigi.com/gizlilik-ve-cerez-politikasi">	
-    <meta property="og:image" content="https://www.yukseldisklinigi.com/layout/images/facebook.jpg">	
+    <meta property="og:image" content="/layout/images/facebook.jpg">	
 
-    <link rel="shortcut icon" href="https://www.yukseldisklinigi.com/layout/images/favicon.png"/>
-    <link rel="canonical" href="https://www.yukseldisklinigi.com/gizlilik-ve-cerez-politikasi"/>
+    <link rel="shortcut icon" href="/layout/images/favicon.png"/>
+    <link rel="canonical" href="https://www.yukseldisklinigi.com/blog"/>
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,26 +24,26 @@
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://www.yukseldisklinigi.com/layout/css/genel.css?id=3" />
-    <link rel="stylesheet" type="text/css" href="https://www.yukseldisklinigi.com/layout/css/my.css?id=6" />
+    <link rel="stylesheet" type="text/css" href="/layout/css/genel.css?id=3" />
+    <link rel="stylesheet" type="text/css" href="/layout/css/my.css?id=6" />
 
 
-    <script type="text/javascript" src="https://www.yukseldisklinigi.com/layout/js/genel.js"></script>
-    <script type="text/javascript" src="https://www.yukseldisklinigi.com/layout/js/main.js?id=4"></script>
+    <script type="text/javascript" src="/layout/js/genel.js"></script>
+    <script type="text/javascript" src="/layout/js/main.js?id=4"></script>
     <script type="text/javascript" src='https://www.google.com/recaptcha/api.js'></script>
 
-    <script type="text/javascript" src="https://www.yukseldisklinigi.com/layout/js/scrollMove.js"></script>
+    <script type="text/javascript" src="/layout/js/scrollMove.js"></script>
 
 
-    <script src="https://www.yukseldisklinigi.com/layout/sweetalert/dist/sweetalert2.all.min.js"></script>
+    <script src="/layout/sweetalert/dist/sweetalert2.all.min.js"></script>
     <!-- Optional: include a polyfill for ES6 Promises for IE11 and Android browser -->
     <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.js"></script>
 
-    <script src="https://www.yukseldisklinigi.com/layout/sweetalert/dist/sweetalert2.min.js"></script>
-    <link rel="stylesheet" href="https://www.yukseldisklinigi.com/layout/sweetalert/dist/sweetalert2.min.css" />
+    <script src="/layout/sweetalert/dist/sweetalert2.min.js"></script>
+    <link rel="stylesheet" href="/layout/sweetalert/dist/sweetalert2.min.css" />
 
-    <link href="https://www.yukseldisklinigi.com/layout/css/lightslider.css" type="text/css" rel="stylesheet" />
-    <script src="https://www.yukseldisklinigi.com/layout/js/lightslider.min.js" type="text/javascript"></script>
+    <link href="/layout/css/lightslider.css" type="text/css" rel="stylesheet" />
+    <script src="/layout/js/lightslider.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(function () {
             $("#lightSliderGallery").lightSlider({auto: true, pause: 5000, gallery: !0, item: 1, enableTouch: !0, enableDrag: !0, loop: !0, thumbItem: 5, slideMargin: 0, adaptiveHeight: !0})
@@ -80,38 +80,38 @@
                 <div class="containerFull">
                     <div class="navbar-header">
 					<a class="logo noTextDecoration d-flex align-items-center justify-content-center" href="https://www.yukseldisklinigi.com">
-						<img src="https://www.yukseldisklinigi.com/layout/images/logo.svg" alt="Yüksel Diş Kliniği" />
+						<img src="/layout/images/logo.svg" alt="Yüksel Diş Kliniği" />
 					</a>
 					</div>
                     <div class="collapse navbar-collapse hidden-xs positionRelative" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
                             <li class="menuSLi">
-                                <a class="" href="https://www.yukseldisklinigi.com">Anasayfa</a>
+                                <a class href="/index.html">Anasayfa</a>
                             </li>  
                             <li class="menuSLi">
-                                <a  href="https://www.yukseldisklinigi.com/hakkimizda">Hakkımızda</a>
+                                <a  href="/hakkimizda.html">Hakkımızda</a>
                             </li>
                             <li class="menuSLi">
-                                <a  href="https://www.yukseldisklinigi.com/tedaviler" role="button" aria-haspopup="true">Tedaviler</a>
+                                <a  href="/tedaviler.html" role="button" aria-haspopup="true">Tedaviler</a>
                                 <ul class="dropdown-menu" aria-labelledby="open_menu">
-                                                                                <li><a href="https://www.yukseldisklinigi.com/tedaviler/1/cene-cerrahisi"><div>Çene Cerrahisi</div></a></li>
-                                                                                        <li><a href="https://www.yukseldisklinigi.com/tedaviler/3/lazer-tedavisi"><div>Lazer Tedavisi</div></a></li>
-                                                                                        <li><a href="https://www.yukseldisklinigi.com/tedaviler/4/dental-tomografi"><div>Dental Tomografi</div></a></li>
-                                                                                        <li><a href="https://www.yukseldisklinigi.com/tedaviler/5/implantoloji"><div>İmplantoloji</div></a></li>
-                                                                                        <li><a href="https://www.yukseldisklinigi.com/tedaviler/6/diger-tedaviler"><div>Diğer Tedaviler</div></a></li>
+                                                                                <li><a href="/tedaviler/1/cene-cerrahisi.html"><div>Çene Cerrahisi</div></a></li>
+                                                                                        <li><a href="/tedaviler/3/lazer-tedavisi.html"><div>Lazer Tedavisi</div></a></li>
+                                                                                        <li><a href="/tedaviler/4/dental-tomografi.html"><div>Dental Tomografi</div></a></li>
+                                                                                        <li><a href="/tedaviler/5/implantoloji.html"><div>İmplantoloji</div></a></li>
+                                                                                        <li><a href="/tedaviler/6/diger-tedaviler.html"><div>Diğer Tedaviler</div></a></li>
                                                                             </ul>
                             </li>
                             <li class="menuSLi">
-                                <a  href="https://www.yukseldisklinigi.com/klinik">Klinik</a>
+                                <a  href="/klinik.html">Klinik</a>
                             </li>
 <!--                            <li class="menuSLi">-->
 <!--                                <a --><!-- href="--><!--/--><!--">--><!--</a>-->
 <!--                            </li>-->
                             <li class="menuSLi">
-                                <a  href="https://www.yukseldisklinigi.com/blog">Blog</a>
+                                <a class="active" href="/blog.html">Blog</a>
                             </li>
                             <li class="menuSLi paddingRight0">
-                                <a  href="https://www.yukseldisklinigi.com/iletisim">İletişim</a>
+                                <a  href="/iletisim.html">İletişim</a>
                             </li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
@@ -138,21 +138,21 @@
                 </a>
             </div>
             <div class="mobilelogoArea">
-                <a href="https://www.yukseldisklinigi.com">
-                    <img src="https://www.yukseldisklinigi.com/layout/images/logo.svg" />
+                <a href="/index.html">
+                    <img src="/layout/images/logo.svg" />
                 </a>
             </div>
             <div class="clear"></div>
         </div>
 
         <ul class="mobileUl">
-            <li><a href="https://www.yukseldisklinigi.com">ANASAYFA</a></li>  
-            <li><a href="https://www.yukseldisklinigi.com/hakkimizda">HAKKIMIZDA</a></li>
-            <li><a href="https://www.yukseldisklinigi.com/tedaviler">TEDAVİLER</a></li>
-            <li><a href="https://www.yukseldisklinigi.com/klinik">KLİNİK</a></li>
-            <li><a href="https://www.yukseldisklinigi.com/hasta-yorumlari">HASTA YORUMLARI</a></li>
-            <li><a href="https://www.yukseldisklinigi.com/blog">BLOG</a></li>
-            <li><a href="https://www.yukseldisklinigi.com/iletisim">İLETİŞİM</a></li>
+            <li><a href="/index.html">ANASAYFA</a></li>  
+            <li><a href="/hakkimizda.html">HAKKIMIZDA</a></li>
+            <li><a href="/tedaviler.html">TEDAVİLER</a></li>
+            <li><a href="/klinik.html">KLİNİK</a></li>
+            <li><a href="/hasta-yorumlari.html">HASTA YORUMLARI</a></li>
+            <li><a href="/blog.html">BLOG</a></li>
+            <li><a href="/iletisim.html">İLETİŞİM</a></li>
         </ul>
 
 
@@ -186,7 +186,7 @@
 <div class="containerFull">
             <div class="breadcrumbs">
             <div class="container">
-                <a href="https://www.yukseldisklinigi.com"><div class="breadcrumbs_item breadcrumbs_item_first">Anasayfa</div></a><a href="https://www.yukseldisklinigi.com/gizlilik-ve-cerez-politikasi"><div class="breadcrumbs_item ">Gizlilik Ve Çerez Politikası</div></a>            </div>
+                <a href="/index.html"><div class="breadcrumbs_item breadcrumbs_item_first">Anasayfa</div></a><a href="/blog.html"><div class="breadcrumbs_item ">Blog</div></a>            </div>
         </div>
             <div class="fullPage">
         <div class="container">
@@ -216,8 +216,8 @@
         <div class="row">
             <div class="footer_left col-lg-4 col-md-5 col-xs-12">
                 <div class="marginTop30 marginBottom20">
-                    <a class="footerLogo" href="https://www.yukseldisklinigi.com">
-                        <img src="https://www.yukseldisklinigi.com/layout/images/logo.svg" alt="Yüksel Diş Kliniği" />
+                    <a class="footerLogo" href="/index.html">
+                        <img src="/layout/images/logo.svg" alt="Yüksel Diş Kliniği" />
                     </a>
                 </div>
             </div>
@@ -226,11 +226,11 @@
                     <div class="footer_social_text fontAlt marginBottom10">Sosyal medya</div>
 					<div class="clear"></div>
                     <div class="footer_social">
-                                                <a href='#' target='_blank'><img height="35px" width="auto" src="https://www.yukseldisklinigi.com/layout/images/social_facebook.svg" alt="Facebook" /></a>
-                                                <a href='#' target='_blank'><img height="35px" width="auto" src="https://www.yukseldisklinigi.com/layout/images/social_twitter.svg" alt="Twitter" /></a>
-                                                <a href='#' target='_blank'><img height="35px" width="auto" src="https://www.yukseldisklinigi.com/layout/images/social_youtube.svg" alt="Youtube" /></a>
-                                                <a href='#' target='_blank'><img height="35px" width="auto" src="https://www.yukseldisklinigi.com/layout/images/social_instagram.svg" alt="Instagram" /></a>
-                        <a href='https://www.yukseldisklinigi.com/blog'><img height="35px" width="auto" src="https://www.yukseldisklinigi.com/layout/images/social_blog.svg" alt="Blog" /></a>
+                                                <a href='#' target='_blank'><img height="35px" width="auto" src="/layout/images/social_facebook.svg" alt="Facebook" /></a>
+                                                <a href='#' target='_blank'><img height="35px" width="auto" src="/layout/images/social_twitter.svg" alt="Twitter" /></a>
+                                                <a href='#' target='_blank'><img height="35px" width="auto" src="/layout/images/social_youtube.svg" alt="Youtube" /></a>
+                                                <a href='#' target='_blank'><img height="35px" width="auto" src="/layout/images/social_instagram.svg" alt="Instagram" /></a>
+                        <a href='/blog'><img height="35px" width="auto" src="/layout/images/social_blog.svg" alt="Blog" /></a>
                     </div>
                     <div class="clear"></div>
                 </div>
@@ -242,24 +242,22 @@
 <div class="footerBottom">
     <div class="container textAlignCenter">
 		<div>
-			<a class="noTextDecoration footer_menu_alt hidden-xs hidden-sm hidden-md" href="https://www.yukseldisklinigi.com">Anasayfa</a>
-			<a class="noTextDecoration footer_menu_alt hidden-xs hidden-sm hidden-md" href="https://www.yukseldisklinigi.com/hakkimizda">Hakkımızda</a>
-			<a class="noTextDecoration footer_menu_alt hidden-xs hidden-sm hidden-md" href="https://www.yukseldisklinigi.com/tedaviler">Tedaviler</a>
-			<a class="noTextDecoration footer_menu_alt hidden-xs hidden-sm hidden-md" href="https://www.yukseldisklinigi.com/klinik">Klinik</a>
+			<a class="noTextDecoration footer_menu_alt hidden-xs hidden-sm hidden-md" href="/index.html">Anasayfa</a>
+			<a class="noTextDecoration footer_menu_alt hidden-xs hidden-sm hidden-md" href="/hakkimizda.html">Hakkımızda</a>
+			<a class="noTextDecoration footer_menu_alt hidden-xs hidden-sm hidden-md" href="/tedaviler.html">Tedaviler</a>
+			<a class="noTextDecoration footer_menu_alt hidden-xs hidden-sm hidden-md" href="/klinik.html">Klinik</a>
 <!--			<a class="noTextDecoration footer_menu_alt hidden-xs hidden-sm hidden-md" href="--><!--/--><!--">--><!--</a>-->
-			<a class="noTextDecoration footer_menu_alt hidden-xs hidden-sm hidden-md" href="https://www.yukseldisklinigi.com/blog">Blog</a>
-			<a class="noTextDecoration footer_menu_alt hidden-xs hidden-sm hidden-md" href="https://www.yukseldisklinigi.com/calisma-saatleri">Çalışma Saatleri</a>
-			<a class="noTextDecoration footer_menu_alt hidden-xs hidden-sm hidden-md" href="https://www.yukseldisklinigi.com/iletisim">İletişim</a>
+			<a class="noTextDecoration footer_menu_alt hidden-xs hidden-sm hidden-md" href="/blog.html">Blog</a>
+			<a class="noTextDecoration footer_menu_alt hidden-xs hidden-sm hidden-md" href="/calisma-saatleri.html">Çalışma Saatleri</a>
+			<a class="noTextDecoration footer_menu_alt hidden-xs hidden-sm hidden-md" href="/iletisim.html">İletişim</a>
 		</div>        
 		<div>		   
-			<a class="noTextDecoration footer_menu_alt" href="https://www.yukseldisklinigi.com/kvkk-ve-aydinlatma-metni">KVKK ve Aydınlatma Metni</a>
-			<a class="noTextDecoration footer_menu_alt" href="https://www.yukseldisklinigi.com/gizlilik-ve-cerez-politikasi">Gizlilik ve Çerez Politikası</a>
+			<a class="noTextDecoration footer_menu_alt" href="/kvkk-ve-aydinlatma-metni.html">KVKK ve Aydınlatma Metni</a>
+			<a class="noTextDecoration footer_menu_alt" href="/gizlilik-ve-cerez-politikasi.html">Gizlilik ve Çerez Politikası</a>
 		</div>
 	</div>
 </div>
 
-
-<a rel="noopener" class="dipnot" href="https://www.dipnot.com.tr" target="_blank" title="Eskişehir Web Tasarım"></a>
 
 </body>
 </html>
