--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="/layout/css/genel.css?id=3" />
-    <link rel="stylesheet" type="text/css" href="/layout/css/my.css?id=6" />
+    <link rel="stylesheet" type="text/css" href="/layout/css/genel.css" />
+    <link rel="stylesheet" type="text/css" href="/layout/css/my.css" />
 
 
     <script type="text/javascript" src="/layout/js/genel.js"></script>
-    <script type="text/javascript" src="/layout/js/main.js?id=4"></script>
+    <script type="text/javascript" src="/layout/js/main.js"></script>
     <script type="text/javascript" src='https://www.google.com/recaptcha/api.js'></script>
 
     <script type="text/javascript" src="/layout/js/scrollMove.js"></script>
